<resources>
    <string name="app_name">Our Hospitable Neighbors</string>
    <string name="navigation_drawer_open">Open side menu</string>
    <string name="navigation_drawer_close">Close side menu</string>
    <string name="log_out">Log out</string>
    <string name="view_all">View All</string>
    <plurals name="number_of_post_found">
        <item quantity="zero">No post in this area</item>
        <item quantity="one">1 post in this area</item>
        <item quantity="other">%d posts in this area</item>
    </plurals>

    <!--These string are for post-a-post activity-->
    <string name="createNewPost">Create A New Post</string>
    <string name="btnPost">Post</string>
    <string name="edtPostName">Title</string>
    <string name="edtPostAddress">Address</string>
    <string name="edtPostPostalCode">Postal Code</string>
    <string name="txtPostPayment">Payment:</string>
    <string-array name="grpPayments">
        <item>By working hours</item>
        <item>Finish the whole post</item>
    </string-array>
    <string name="txtPaymentRateName">/Hrs</string>

    <!--These string are for post-detail activity-->
    <string name="postDetailTitle">Post Detail</string>
    <string name="btnAcceptPost">Accept this Post</string>
    <string name="btnBack">Back</string>
    <string name="txtSearchHint">Search something</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_temp">LoginActivityTemp</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_about_me">AboutMe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>